--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==3.0.0
-Flask-SQLAlchemy==3.1.1
+Flask==2.3.3
 Flask-Login==0.6.3
-Werkzeug==3.0.1
+Flask-SQLAlchemy==3.1.1
+Werkzeug==2.3.7
+Faker==20.1.0
 gunicorn==21.2.0
-psycopg2-binary==2.9.7  # For PostgreSQL
+psycopg2-binary==2.9.7  # Use psycopg2-binary for PostgreSQL compatibility
 
